WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116789
[JSC] Test262 15.5.4.9_3 test is failing
https://bugs.webkit.org/show_bug.cgi?id=116789
Summary
[JSC] Test262 15.5.4.9_3 test is failing
Zan Dobersek
Reported
2013-05-26 09:04:01 PDT
[JSC] Test262 15.5.4.9_3 test is failing
Attachments
Patch
(6.91 KB, patch)
2013-05-26 09:39 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion
(498.27 KB, application/zip)
2013-05-28 23:37 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion
(500.85 KB, application/zip)
2013-05-29 00:51 PDT
,
Build Bot
no flags
Details
Patch
(9.03 KB, patch)
2013-05-29 09:58 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2013-05-26 09:39:36 PDT
Created
attachment 202924
[details]
Patch
Zan Dobersek
Comment 2
2013-05-26 10:36:55 PDT
Test case:
http://hg.ecmascript.org/tests/test262/log/e62e1b35f0d9/test/suite/ch15/15.5/15.5.4/15.5.4.9/15.5.4.9_3.js
The test-introducing bug report, with much detail about the expected behavior:
https://bugs.ecmascript.org/show_bug.cgi?id=1245
Build Bot
Comment 3
2013-05-28 23:37:06 PDT
Comment on
attachment 202924
[details]
Patch
Attachment 202924
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/672457
New failing tests: fast/js/kde/StringObject.html
Build Bot
Comment 4
2013-05-28 23:37:07 PDT
Created
attachment 203126
[details]
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Build Bot
Comment 5
2013-05-29 00:51:31 PDT
Comment on
attachment 202924
[details]
Patch
Attachment 202924
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/672466
New failing tests: fast/js/kde/StringObject.html
Build Bot
Comment 6
2013-05-29 00:51:33 PDT
Created
attachment 203132
[details]
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-04 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Zan Dobersek
Comment 7
2013-05-29 09:58:14 PDT
Created
attachment 203210
[details]
Patch
Geoffrey Garen
Comment 8
2013-06-03 15:15:38 PDT
Comment on
attachment 203210
[details]
Patch r=me
Zan Dobersek
Comment 9
2013-06-04 01:08:46 PDT
Comment on
attachment 203210
[details]
Patch Clearing flags on attachment: 203210 Committed
r151159
: <
http://trac.webkit.org/changeset/151159
>
Zan Dobersek
Comment 10
2013-06-04 01:08:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug